--- a/06-layout-position/index.html
+++ b/06-layout-position/index.html
@@ -1,37 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>TailwindCSS</title>
-  </head>
-  <body>
-    <!-- Positioning -->
 
-    <!-- Top left corner -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>TailwindCSS</title>
+</head>
 
-    <!-- Top right corner -->
+<body>
+  <!-- Positioning -->
+  <div class="relative w-1/2 h-12 bg-red-200">
+    <p>Parent Element</p>
+    <div class="absolute bottom-0 right-0 bg-red-500">
+      <p>Absolute Child</p>
+    </div>
+  </div>
 
-    <!-- Bottom left corner -->
+  <!-- Top left corner -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute left-0 top-0 h-16 w-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Bottom right corner -->
+  <!-- Top right corner -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute right-0 top-0 h-16 w-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Span top edge -->
+  <!-- Bottom left corner -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute left-0 bottom-0 h-16 w-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Span left edge -->
+  <!-- Bottom right corner -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute right-0 bottom-0 h-16 w-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Span right edge -->
+  <!-- Span top edge -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute inset-x-0 top-0 h-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Span bottom edge -->
+  <!-- Span left edge -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute inset-y-0 left-0 w-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Display Classes -->
+  <!-- Span right edge -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute inset-y-0 right-0 w-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Z-Index -->
+  <!-- Span bottom edge -->
+  <div class="relative h-32 w-32 bg-yellow-100">
+    <div class="absolute inset-x-0 bottom-0 h-16 bg-yellow-300"></div>
+  </div>
 
-    <!-- Floats -->
-  </body>
+  <!-- Display Classes -->
+  <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quam eligendi incidunt <span
+      class="inline font-bold">This is
+      inline</span> aut consequuntur ea, quod,
+    numquam debitis et culpa, impedit atque! Eaque inventore rerum exercitationem sed vel <span
+      class="inline-block font-bold">This is inline block</span>fuga sit, rem soluta magni nam
+    numquam, <span class="block font-bold">This is block</span>mollitia quasi amet, error nihil animi at. Vitae rem
+    assumenda eum,
+    soluta <span class="hidden font-bold">This is hidden</span>doloremque molestiae, accusamus
+    ipsa reiciendis id quia voluptas veniam corporis perspiciatis nisi ea.</div>
+
+  <!-- Z-Index -->
+  <div class="relative h-36">
+    <div class="absolute left-10 w-24 h-24 bg-blue-300 z-40">1</div>
+    <div class="absolute left-20 w-24 h-24 bg-blue-400">2</div>
+    <div class="absolute left-40 w-24 h-24 bg-blue-500 z-10">3</div>
+    <div class="absolute left-60 w-24 h-24 bg-blue-600 z-20">4</div>
+    <div class="absolute left-80 w-24 h-24 bg-blue-700 z-30">5</div>
+  </div>
+
+  <!-- Floats -->
+  <div class="w-1/2">
+    <img class="h-48 w-48 float-left m-4" src="../assets/img/img1.jpg" alt="">
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque tenetur repellat ex accusamus error
+      odio, officiis, doloribus totam sequi explicabo dolores veritatis sed assumenda voluptatem reprehenderit
+      reiciendis. Explicabo, distinctio.</p>
+  </div>
+</body>
+
 </html>
 
 <!-- Position Classes
