--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -1,21 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Backgrounds & Shadows</title>
-  </head>
-  <body>
-    <!-- Background Classes -->
 
-    <!-- Gradients -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Backgrounds & Shadows</title>
+</head>
 
-    <!-- Shadows -->
+<>
+  <!-- Background Classes -->
+  <div class="h-64 w-72 bg-no-repeat bg-cover bg-center" style="background-image: url('../assets/img/img1.jpg')"></div>
 
-    <!-- Mix Blend -->
+  <!-- Gradients -->
+  <div class="h-24 bg-gradient-to-l from-cyan-500 to-blue-500"></div>
+
+  <!-- Shadows -->
+  <div class="w-96 mt-6 ml-4 p-3 shadow">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-md">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-lg">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-xl">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-2xl">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-inner">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-blue-500/50">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+  <div class="w-96 mt-6 ml-4 p-3 shadow-2xl shadow-red-500">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit animi nisi numquam possimus? Beatae, enim. Hic unde
+    dolore delectus perspiciatis?
+  </div>
+
+  <!-- Mix Blend -->
+  <div class="flex justify-center -space-x-24">
+    <div class="mix-blend-multiply bg-blue-400">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias
+      expedita, recusandae
+      praesentium deleniti modi reprehenderit sit tempore corporis fugiat optio.</div>
+    <div class="mix-blend-multiply bg-pink-400">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta eaque adipisci quo omnis voluptatum, maiores
+      asperiores repellendus beatae corrupti ad!
+    </div>
+  </div>
   </body>
+
 </html>
 
 <!-- Background Size
