--- a/10-interactivity/index.html
+++ b/10-interactivity/index.html
@@ -1,34 +1,107 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Interactivity</title>
-  </head>
-  <body>
-    <!-- Hover State Styling -->
 
-    <!-- Focus State Styling -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Interactivity</title>
+</head>
 
-    <!-- Active State Styling -->
+<body>
+  <!-- Hover State Styling -->
+  <button class="bg-black text-white py-3 px-5 rounded-lg m-3
+  hover:bg-orange-500 hover:text-white">
+    Submit
+  </button>
 
-    <!-- Styling based on parent state -->
+  <!-- Focus State Styling -->
+  <button class="bg-black text-white py-3 px-5 rounded-lg m-3
+  focus:bg-green-500 focus:text-white">
+    Submit
+  </button>
 
-    <!-- Pseudo Classes -->
+  <!-- Active State Styling -->
+  <button class="bg-black text-white py-3 px-5 rounded-lg m-3
+  active:bg-yellow-500 active:text-white">
+    Submit
+  </button>
 
-    <!-- Appearance -->
-    <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
+  <!-- Styling based on parent state -->
+  <a href="" class="group block max-w-xs mx-auto rounded-lg p-6 bg-white shadow-lg space-y-3 hover:bg-sky-500">
+    <h3 class="group-hover:text-white">Card Title</h3>
+    <p class="group-hover:text-white">This is the card text</p>
+  </a>
 
-    <!-- Cursor -->
+  <!-- Pseudo Classes -->
+  <ul>
+    <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 1</li>
+    <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 2</li>
+    <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 3</li>
+    <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 4</li>
+    <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 5</li>
+    <li class="first:bg-red-200 even:bg-green-500 odd:bg-orange-500">Item 6</li>
+  </ul>
 
-    <!-- Resize -->
+  <!-- Appearance -->
+  <!-- Use appearance-none to reset any browser specific styling on an element. This utility is often used when creating custom form components. -->
+  <select class="appearance-none">
+    <option value="yes">Yes</option>
+    <option value="no">No</option>
+  </select>
 
-    <!-- User Select -->
+  <br>
 
-    <!-- Smooth Scroll Example -->
-  </body>
+  <!-- Cursor -->
+  <button class="bg-black text-white py-3 px-5 rounded-lg m-3
+  cursor-not-allowed
+  ">Submit</button>
+
+  <!-- User Select -->
+  <div class="select-none">Lorem ipsum dolor sit amet.</div>
+  <div class="select-text">Lorem ipsum dolor sit amet.</div>
+  <div class="select-all">Lorem ipsum dolor sit amet.</div>
+  <div class="select-auto">Lorem ipsum dolor sit amet.</div>
+
+  <a href="#item" class="block my-6">Go to Item</a>
+
+  <!-- Smooth Scroll Example -->
+
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste nihil necessitatibus odio nobis ratione neque quae
+    asperiores! Eveniet quia harum possimus quam itaque, molestiae ad illo veniam laborum autem laboriosam saepe
+    reiciendis, animi, recusandae esse consequuntur dolor doloremque. Aspernatur, beatae eligendi! Facere eveniet modi
+    quis itaque eaque amet, illum veniam, vel dolore ea tempora magni corporis quidem iusto velit aliquam assumenda
+    culpa perferendis possimus officia in repudiandae delectus consectetur nobis! Aliquam itaque rerum laborum aut
+    ducimus ad alias nesciunt illum, veritatis dolores reprehenderit obcaecati tempore officia molestiae modi
+    voluptatibus earum quod. Quas facilis autem alias ipsa possimus itaque ab aut minima vitae minus rerum, natus eius
+    laborum odit enim aperiam ullam, veniam quaerat nobis. Quas cupiditate dolorem adipisci quidem veritatis commodi
+    odio odit vero, voluptate dolores molestias praesentium vitae minus rerum ex, excepturi illo optio eveniet eum
+    aliquam aperiam. Cum nostrum eius quod inventore, esse, adipisci aliquid voluptates laboriosam natus reiciendis
+    consequatur fugiat facere in earum quibusdam, voluptatum deserunt suscipit harum ea. Tenetur harum rem doloribus,
+    minus eos tempora nemo quo veniam exercitationem sequi quaerat quibusdam delectus quos ut placeat itaque sit nihil,
+    odio natus blanditiis asperiores suscipit? Voluptatem amet eum, suscipit debitis possimus hic aut doloremque
+    consequuntur sunt expedita odit, necessitatibus similique incidunt esse ratione repellendus velit dolorem temporibus
+    explicabo laboriosam officia minus, ducimus obcaecati corrupti? Labore incidunt perspiciatis odit. Aut vitae debitis
+    voluptatem, praesentium pariatur officia voluptas exercitationem sequi nobis deserunt laborum velit nemo magni
+    accusantium deleniti eligendi quasi animi sed fuga dolores quas! Iste eveniet modi provident. Eligendi, magnam totam
+    maxime recusandae illum vel, aliquam ullam, provident quam distinctio culpa iste deserunt nam cupiditate.
+    Necessitatibus omnis odio ducimus maiores voluptas rerum quis aliquam. Voluptate obcaecati ipsa quasi, tempora iste
+    aliquam eaque labore molestiae officiis minus, cumque quo omnis odit error atque dolorem blanditiis ullam explicabo
+    nisi ipsam iure porro quia aspernatur inventore. Voluptatum fugiat in dolor itaque amet alias aperiam non saepe
+    nostrum. Cum tenetur minus sunt consequatur! Libero at, incidunt obcaecati nostrum est beatae, quis architecto,
+    cupiditate quaerat ratione iure minus blanditiis eveniet aperiam. Rerum cupiditate laboriosam impedit modi beatae
+    earum, maxime qui ipsa. Suscipit quis, quibusdam autem sunt laboriosam necessitatibus atque molestias ipsum modi
+    ullam quaerat, tempore illo recusandae? Laudantium maiores dolore impedit cum sapiente, architecto blanditiis
+    veritatis ipsam quidem dolorem asperiores repudiandae pariatur culpa, optio dicta perferendis fuga ullam ratione
+    deleniti voluptatibus corrupti aperiam nemo minima? Necessitatibus neque adipisci cupiditate ipsam vitae
+    consequuntur eius.</p>
+  <div id="item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime vitae, fugiat libero repellat sunt
+    soluta eius perspiciatis accusamus consectetur tenetur totam, ipsum consequatur. Deserunt, magni assumenda! Impedit
+    suscipit natus cumque assumenda, omnis repellendus soluta quod, minima nam quaerat maiores voluptates ex veritatis,
+    illum saepe cupiditate iure perferendis eos ipsum hic.</div>
+</body>
+
 </html>
 
 <!-- Cursor
