--- a/Projects/Loopstudios Website/index.html
+++ b/Projects/Loopstudios Website/index.html
@@ -53,7 +53,15 @@
             group-hover:border-blue-50"></div>
           </div>
         </div>
-        <!-- @todo Hamburger Button -->
+        <!-- Hamburger Button -->
+        <div class="md:hidden">
+          <button id="menu-btn" type="button" class="open z-40 block
+          hamburger md:hidden focus:outline-none">
+            <span class="hamburger-top"></span>
+            <span class="hamburger-middle"></span>
+            <span class="hamburger-bottom"></span>
+          </button>
+        </div>
       </nav>
 
       <!-- @todo - Mobile Menu -->
