--- a/Projects/Shortly Website/index.html
+++ b/Projects/Shortly Website/index.html
@@ -10,7 +10,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
-  <script src="https://cdn.tailwindcss.com"></script>
   <title>Shortly Website</title>
 </head>
 
@@ -47,6 +46,39 @@
 
     <!-- @todo Mobile Menu -->
   </nav>
+
+  <!-- Hero Section -->
+  <section id="hero">
+    <!-- Hero Container -->
+    <div class="container flex flex-col-reverse mx-auto p-6
+    lg:flex-row">
+      <!-- Content Container -->
+      <div class="flex flex-col space-y-10 mb-44 lg:mt-16 lg:w-1/2
+      xl:mb-52">
+        <h1 class="text-5xl font-bold text-center lg:text-6xl
+        lg:max-w-md lg:text-left">
+          More than just shorter links
+        </h1>
+        <p class="text-2xl text-center text-gray-400 lg:max-w-md
+        lg:text-left">
+          Build your brand's recognition and get detailed insignts on
+          how your
+          links are performing.
+        </p>
+        <div class="mx-auto lg:mx-0">
+          <a href="#" class="py-5 px-10 text-2xl font-bold text-white
+          bg-cyan rounded-full lg:py-4 hover:opacity-70">
+            Get Started
+          </a>
+        </div>
+      </div>
+
+      <!-- Image -->
+      <div class="mb-24 mx-auto md:w-180 lg:w-1/2 lg:mb-0">
+        <img src="images/illustration-working.svg" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
