--- a/Projects/Shortly Website/index.html
+++ b/Projects/Shortly Website/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
+  <script src="js/script.js" defer></script>
   <title>Shortly Website</title>
 </head>
 
@@ -95,7 +96,12 @@
         hover:bg-cyanLight focus:outline-none md:py-2">
           Shorten It!
         </button>
+
+        <!-- Error Message -->
+        <div id="err-msg" class="absolute left-7
+        bottom-3 text-red text-sm italic"></div>
       </form>
+      <ul id="parent"></ul>
 
       <!-- Link 1 -->
       <div class="flex flex-col items-center justify-between w-full
