--- a/Projects/Testimonial Grid/index.html
+++ b/Projects/Testimonial Grid/index.html
@@ -17,9 +17,11 @@
   <!-- Global Container -->
   <div class="container mx-auto max-w-7xl p-2 md:p-10">
     <!-- Grid Container -->
-    <div class="text-white">
+    <div class="grid gap-6 grid-cols-1 text-white md:grid-cols-4
+    md:grid-rows-2">
       <!-- Box 1 -->
-      <div class="relative p-10 rounded-xl bg-purple-700">
+      <div class="relative p-10 rounded-xl bg-purple-700
+      md:col-span-2">
         <!-- Quotes Image -->
         <img src="images/bg-pattern-quotation.svg" alt="" class="absolute
         top-3 right-10 scale-125 md:top-7 md:right-24 md:scale-150">
@@ -88,7 +90,8 @@
       </div>
 
       <!-- Box 3 -->
-      <div class="hidden p-10 rounded-xl text-gray-900 bg-white">
+      <div class="hidden p-10 rounded-xl text-gray-900 bg-white
+      md:block md:row-span-2">
         <!-- Box Header -->
         <div class="flex space-x-4">
           <img src="images/image-kira.jpg" alt="" class="w-10 h-10
@@ -146,7 +149,8 @@
       </div>
 
       <!-- Box 5 -->
-      <div class="p-10 rounded-xl bg-gray-900">
+      <div class="p-10 rounded-xl bg-gray-900
+      md:col-span-2">
         <!-- Box Header -->
         <div class="flex space-x-4">
           <img src="images/image-patrick.jpg" alt="" class="w-10 h-10
@@ -176,7 +180,8 @@
       </div>
 
       <!-- Box 6 -->
-      <div class="p-10 rounded-xl text-gray-900 bg-white">
+      <div class="p-10 rounded-xl text-gray-900 bg-white
+      md:hidden">
         <!-- Box Header -->
         <div class="flex space-x-4">
           <img src="images/image-kira.jpg" alt="" class="w-10 h-10
