--- a/Projects/Testimonial Grid/index.html
+++ b/Projects/Testimonial Grid/index.html
@@ -45,7 +45,7 @@
         </p>
 
         <!-- Small Text -->
-        <p class="mt-6 opacity-50">
+        <p class="mt-6 opacity-50 line-clamp-6">
           "I was an EMT for many years before I joined the bootcamp.
           I've been
           looking to make a transition and have heard some people who
@@ -58,7 +58,11 @@
           Since
           completing the course, I've successfully switched careers,
           working
-          as a Software Engineer at a VR startup."
+          as a Software Engineer at a VR startup. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+          perspiciatis molestiae, porro mollitia, amet officia eum voluptates earum praesentium voluptas adipisci
+          dignissimos? Exercitationem pariatur ipsa fugiat illum consequatur aliquam atque qui deleniti? Aliquam
+          perferendis laboriosam laudantium consequatur in architecto, ad distinctio, voluptatum quisquam similique
+          tempora aut optio vitae eum? Beatae."
         </p>
       </div>
 
@@ -80,12 +84,15 @@
         </p>
 
         <!-- Small Text -->
-        <p class="mt-6 opacity-50">
+        <p class="mt-6 opacity-50 line-clamp-5">
           "I started as a total newbie with virtually no coding
           skills. I now
           work as a mobile engineer for a big company. This was one
           of the
-          best investments I've made in myself."
+          best investments I've made in myself. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi ratione
+          repudiandae et, nemo delectus natus maxime sunt aliquam ad beatae a est enim. Assumenda consectetur nemo
+          deleniti enim eaque quia voluptas consequatur reprehenderit eligendi cumque voluptate quaerat, labore totam
+          perspiciatis? Numquam rem harum perspiciatis atque! Sit repellat eaque iusto maxime."
         </p>
       </div>
 
