--- a/Projects/Fylo Website With Color Picker/index.html
+++ b/Projects/Fylo Website With Color Picker/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
   <meta charset="UTF-8">
@@ -37,8 +37,8 @@
     <!-- Menu -->
     <div class="flex items-center justify-center space-x-4
     md:space-x-10 md:absolute top-12 right-10">
-      <a href="#features" class="hover:text-accentCyan dark:hover:text-accentBlue">Features</a>
-      <a href="#testimonials" class="hover:text-accentCyan dark:hover:text-accentBlue">Testimonials</a>
+      <a href="#features" class="hover:text-accentCyan">Features</a>
+      <a href="#testimonials" class="hover:text-accentCyan">Testimonials</a>
 
       <!-- Dark/Light Mode Button -->
       <button id="theme-toggle" class="text-gray-500
@@ -282,6 +282,69 @@
       </div>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-200 dark:bg-darkBlue2">
+    <div class="container mx-auto pt-12 px-5 pb-10">
+      <!-- Flex Container For All Items -->
+      <div class="flex flex-col justify-between space-y-24
+      md:flex-row md:space-y-0">
+        <!-- Email & Phone -->
+        <div class="mt-10 space-y-6">
+          <div class="flex items-center space-x-3 md:-mt-10">
+            <div class="w-6">
+              <img src="images/icon-phone.svg" alt="" class="scale-10">
+            </div>
+            <div>+1-543-123-4567</div>
+          </div>
+          <div class="flex items-center space-x-3">
+            <div class="w-6">
+              <img src="images/icon-email.svg" alt="" class="scale-10">
+            </div>
+            <div>example@fylo.com</div>
+          </div>
+        </div>
+
+        <!-- Menus -->
+        <div class="flex flex-col space-y-10 text-xl md:text-base
+        md:space-x-20 md:space-y-0 md:flex-row">
+          <div class="flex flex-col space-y-3">
+            <a href="#">About</a>
+            <a href="#">Jobs</a>
+            <a href="#">Press</a>
+            <a href="#">Blog</a>
+          </div>
+          <div class="flex flex-col space-y-3">
+            <a href="#">Contact Us</a>
+            <a href="#">Terms</a>
+            <a href="#">Privacy</a>
+          </div>
+        </div>
+
+        <!-- Social -->
+        <div class="flex justify-center pb-10 space-x-3">
+          <div>
+            <a href="#">
+              <img src="images/facebook.svg" alt="" class="p-2 
+              bg-gray-300 dark:bg-darkBlue rounded-full ficon">
+            </a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="images/twitter.svg" alt="" class="p-2
+              bg-gray-300 dark:bg-darkBlue rounded-full ficon">
+            </a>
+          </div>
+          <div>
+            <a href="#">
+              <img src="images/instagram.svg" alt="" class="p-2
+              bg-gray-300 dark:bg-darkBlue rounded-full ficon">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
